--- a/macros.tex
+++ b/macros.tex
@@ -6,6 +6,6 @@
 \newcommand{\guilt}{gu}
 \newcommand{\fami}{fam}
 \newcommand{\minP}{t_{drop}}
-\newcommand{\minDR}{\kappa_{drop}}
+\newcommand{\minDR}{\kappa}
 \newcommand{\minMR}{\kappa_{manp}}
 \newcommand{\treply}{t_{reply}}
