--- a/evaluation.tex
+++ b/evaluation.tex
@@ -46,30 +46,30 @@ We rely upon four metrics to characterize the video streaming performance.
 \subsubsection*{Satisfaction $\sat$} The satisfaction or satisfaction is the fraction of chunks peers receive in time, averaged over all peers. 
 \subsubsection*{Avg. Loss $lo$} The average loss indicates the fraction of chunks that peers do not receive or not receive in time. 
 \subsubsection*{Detection Overhead $DO$} The detection overhead describes the communication overhead created by the detection mechanism. More formally, it is the ratio of messages exchanged during due to the detection mechanism and all signaling messages in the system.
-\subsubsection*{Benign Ratio per Neighbor List $BRNL$} The benign ratio per nieghbor list measures the fraction of benign peers in the source's neighbor list.
+\subsubsection*{Benign Ratio per Neighbor List $BRNL$} The benign ratio per neighbor list measures the fraction of benign peers in the source's neighbor list.
 
 \subsection{Case 1: \drop Severity}
 
-In this case study, we evaluate the impact of \drop attack on two different network scenarios:  (1) DONet, and (2) DONet+SWAP \cite{nguyen2016swap}, in order to assess the attack's severity when a replacement mechanism for peers is operating.
-Note that the attacker's budget is independent from the overlay's size, in fact, the attacker's budget is dependent on the neighbor list size $LS$.
-The reason is that as malicious peers target is to occupy the closest peers to the source, the remaining size of the overlay is not a factor on the impact of the \drop attack.
-% \mn[Hatem]{I'm not entirely sure that the assumption above is always correct, and even if it is correct, shouldn't we back it up with results and numbers, so feel free to remove it.}   
+In this case study, we evaluate the impact of \drop on two different network scenarios:  (1) DONet, and (2) DONet+SWAP \cite{nguyen2016swap}. We consider SWAP to check  how regular replacement of headnodes affects the attack. 
 
-Given the source's neighbor list size $LS=10$, we choose the following combinations for the attackers budget $x={\{\eta x, MN\}}$: $\{10=\{10,0\}\}, \{20=\{5,15\}\}, 77=\{7,70\}\}, 32=\{8,24\}\}$.
-In otherwords, $MN=70$ denotes that 7 malicious peers are connected to each of the 10 headnodes.
+We use the same total number of peers but vary the size of the neighbor list- 
+As malicious peers aim to occupy the closest peers to the source, the remaining size of the overlay is not a factor on the impact of the \drop attack.
+  
+
+Given the source's neighbor list size $LS=10$, we choose the following combinations for the attackers budget $(eta x, MN)$: $(10,0), (5,15), (7,70), (8,24)$.
+Here, $MN=70$ denotes that 7 malicious peers are connected to each of the 10 headnodes.
 We start with analyzing the attack's impact on DONet and then we evaluate the resilience of the SWAP mechanism to the attack.
 
-In Figure~\ref{subfig:avg-loss-donet}, the average chunk loss ratio is presented. 
-As expected, the average loss is 100\% when $\eta x= LS =10$, which means that the source's $LS$ is utterly saturated with malicious headnodes, i.e., no chunks are transmitted to the rest of the overlay.
-Accordingly, the average peer satisfaction in such case is always 0\%. 
+Figure~\ref{subfig:avg-loss-donet} displays the average chunk loss ratio.
+Unsurprisingly, the average loss is 100\% when $\eta x= LS =10$, which means that the source's $LS$ is utterly saturated with malicious headnodes, so that no chunks are transmitted to the rest of the overlay.
+Accordingly, the average peer satisfaction is always 0\%. 
 
-For the other cases where $\eta x < 10$; the average loss when the stream starts reaches up to ~82\% for $x=\{7, 70\}$, for $x=\{5, 15\}$ the loss ratio is ~54\% and ~73\% for $x=\{8, 24\}$, as shown in Figure~\ref{subfig:avg-loss-donet}.
-% it is noticed that the impact of the attack is significantly successful in dropping the chunk success delivery ratio up to ~82\% once the source starts to send video chunks.
-It is inferred that as the value of $\eta x, MN$ increase, benign peers experience remarkable service degradation for a longer time period as a result of having benign peers closer to the source overloaded with requests that they can not completely respond to. 
+If $\eta x < 10$, the average loss initially reaches up to ~82\% for $(\eta x, MN)=(7, 70)$, for $$(\eta x, MN)=(5, 15)$$ the loss ratio is ~54\% and ~73\% for $(\eta x, MN)=(8, 24)$, as shown in Figure~\ref{subfig:avg-loss-donet}.
+If $\eta x$ or $MN$ increases, benign peers experience severe service degradation for a longer time period. Benign peers close to the source are overloaded with requests that they cannot respond to, leading to a high ratio of missed chunks. 
 Nevertheless, the loss ratio decreases once a fraction of benign (headnodes and non-headnodes) peers are able to serve the rest of the overlay.
 
 Figure~\ref{subfig:satisfaction-donet} presents the average peer satisfaction level $\sat$.
-As a consequence of experiencing high chunk loss rate, higher values of $\eta x, MN$ result in lower peer satisfaction over time, where benign peers at $x=\{5, 15\}$ restore their satisfaction level at ~340s, which is earlier than at $x=\{7, 70\}$ and $x=\{8, 24\}$.
+As a consequence of experiencing high chunk loss rate, higher values of $\eta x, MN$ result in lower peer satisfaction over time, where benign peers at $(\eta x, MN)=(5, 15)$ restore their satisfaction level at ~340s, which is earlier than at $(\eta x, MN)=(7, 70)$ and $(\eta x, MN)=(8, 24)$.
 
 Now we analyze the attack's impact while SWAP is operating.
 While executing SWAP's operations, peers nominate and forward other peers nominations to the source. 
