--- a/evaluation.tex
+++ b/evaluation.tex
@@ -72,12 +72,12 @@ Figure~\ref{subfig:satisfaction-donet} presents the average peer satisfaction le
 As a consequence of experiencing high chunk loss rate, higher values of $\eta x, MN$ result in lower peer satisfaction over time, where benign peers at $(\eta x, MN)=(5, 15)$ restore their satisfaction level at ~340s, which is earlier than at $(\eta x, MN)=(7, 70)$ and $(\eta x, MN)=(8, 24)$.
 
 Now we analyze the attack's impact while SWAP is operating.
-While executing SWAP's operations, peers nominate and forward other peers nominations to the source. 
+While executing SWAP's operations, peers nominate new headnodes and forward these nominations to the source. 
 Consequentially, malicious peers abuse the mechanism via nominating other malicious peers at each nomination round. 
-Moreover, malicious peers connected to benign headnodes are eventually nominated to the source and thus, results in occupying the sources $LS$.
+Moreover, malicious peers connected to benign headnodes are eventually nominated to the source and thus can occupy the source's neighbor list $LS$. 
 
-As shown in Figure~\ref{subfig:avg-loss-donet}, comparing the same values at $x=\{5, 15\}$ for both DONet and SWAP show that the impact of the attack when SWAP is operating is more significant.
-Before the source's $LS$ is saturated with malicious peers at $t=80s$, the average loss is in fact decreasing, However, afterwards the the average chunk loss increases up to ~97\% as a result of more malicious peers being promoted as headnodes, which in turn decreases the fraction of reachable chunks to benign peers.
+As shown in Figure~\ref{subfig:avg-loss-donet}, comparing the same values at $(\eta x, MN)=(5, 15)$ for both DONet and SWAP show that the impact of the attack is more significant if SWAP is active.
+Before the source's $LS$ is saturated with malicious peers at $t=80s$, the average loss is in fact decreasing, However, as soon as malicious peers control the neighbor list, the average chunk loss increases up to ~97\%. 
 For the same reason, the satisfaction level of benign peers eventually decreases to ~6\%, which highlights the unsuitability of SWAP against our proposed attack.
 
 \begin{figure}[t!]
